# substrate-storage-example

./: Cargo.toml  README.md
src/: datadef.rs  main.rs  traits.rs
src/storage/: blocknumber.rs  generator.rs  mod.rs  redis.rs
