[package]
name = "storage"
version = "0.1.0"
authors = ["Aton <jincxmain@vip.163.com>"]
edition = "2018"

[dependencies]
environmental = { version = "~1.0" }
parity-codec = { version = "2.1"}

substrate-primitives = { git = "https://github.com/paritytech/substrate" }

redis = { version = "0.9.0", optional = true }
lru = { version = "0.1.11", optional = true }
lazy_static = { version = "1.0", optional = true }
parking_lot = { version = "*", optional = true }

[features]
msgbus-redis = [
    "redis",
    "lazy_static",
    "parking_lot",
]
msgbus-redis-keyhash = []

cache-lru = [
    "lru",
    "lazy_static",
]
